# Audio-To-MIDI

./: .gitignore  LICENSE  README.md  pyproject.toml  task_plan.md  启动.bat
src/: main.py  pipeline.py
src/gui/: main_window.py  piano_roll.py  track_list.py  waveform_view.py  worker.py
src/midi/: merger.py  quantizer.py
src/score/: midi2mscz.py
src/separation/: demucs_runner.py
src/transcription/: base.py  drum.py  melodic.py  transkun.py
