[project]
name = "audio-to-midi"
version = "0.1.0"
description = "音频文件转MIDI文件 — 多乐器音源分离 + 分轨转录"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "demucs>=4.0",
    "basic-pitch>=0.3",
    "adtof-pytorch @ git+https://github.com/xavriley/ADTOF-pytorch.git",
    "transkun>=2.0",
    "pretty-midi>=0.2",
    "music21>=9.1",
    "PySide6>=6.7",
    "pyqtgraph>=0.13",
    "librosa>=0.10",
    "soundfile>=0.12",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.scripts]
audio-to-midi = "src.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }
